kube/add.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add
  labels:
    app: add
spec:
  replicas: 3
  selector:
    matchLabels:
      app: add
  template:
    metadata:
      labels:
        app: add
    spec:
      containers:
      - name: add
        image: miggylol/add
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: add
  labels:
    app: add
spec:
  type: NodePort
  selector:
    app: add
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
