kube/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: miggylol/tdg-client:1.0.3
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
  - port: 3000
    nodePort: 30082
  type: NodePort
