kube/game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
  labels:
    app: game
spec:
  replicas: 3
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: game
        image: miggylol/tdg-game:1.0.8
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: game
spec:
  selector:
    app: game
  ports:
  - port: 30081
    targetPort: 8081
  type: LoadBalancer
  loadBalancerIP: 104.197.134.202
