kube/sub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sub
  labels:
    app: sub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sub
  template:
    metadata:
      labels:
        app: sub
    spec:
      containers:
      - name: sub
        image: miggylol/sub
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: sub
  labels:
    app: sub
spec:
  type: NodePort
  selector:
    app: sub
  ports:
  - protocol: TCP
    port: 8081
